args 数据库，表名，单表已测试。

--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -1,34 +1,12 @@
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@//127.0.0.1:1521/bdpts
-jdbc.user=bdpts
-jdbc.password=bdpts
+jdbc.url=jdbc:oracle:thin:@//22.224.75.6:1521/datalab
+jdbc.user=bdp1hive
+jdbc.password=bdp1hive
 jdbc.datasource.size=1
 
 mysql.jdbc.driver=com.mysql.jdbc.Driver
-mysql.jdbc.url=jdbc:mysql://192.168.218.130:3306/test
-mysql.jdbc.user=root
-mysql.jdbc.password=root
-mysql.jdbc.datasource.size=10
+mysql.jdbc.url=jdbc:mysql://22.224.64.99:3306/hive2
+mysql.jdbc.user=gotophive
+mysql.jdbc.password=hive99
+mysql.jdbc.datasource.size=1
 
-hive.jdbc.driver=org.apache.hive.jdbc.HiveDriver
-hive.jdbc.datasource.size=1
-hiver.jdbc.url=jdbc:hive2://bdp01nn01:10000/default
-hiver.jdbc.user=hive
-hiver.jdbc.password=
-
-hiven.jdbc.url=jdbc:hive2://bdp01nn01:10000/default
-hiven.jdbc.user=hive
-hiven.jdbc.password=
-
-hdfs.url.r=hdfs://bdp01nn01:8020
-hdfs.url.n=hdfs://bdp01nn01:8020
-hadoop.user.name=hive
-
-server.id.r=1
-regex.common=_
-regex.special=-
-database.head=sdata
-table.oracle.column.database=DB_NAME
-table.oracle.column.tablename=TABLE_NAME
-table.oracle.column.tablesize=TOTAL_SIZE
-table.oracle.column.tablerows=TOTAL_RECS
