--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.40</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -63,8 +68,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source><!-- 源代码使用的开发版本 -->
-                    <target>1.8</target><!-- 需要生成的目标class文件的编译版本 -->
+                    <source>1.7</source><!-- 源代码使用的开发版本 -->
+                    <target>1.7</target><!-- 需要生成的目标class文件的编译版本 -->
                     <!-- 一般而言，target和source保持一致的，但有时候不同：为了让程序能在其他版本的jdk中运行(对于低版本目标jdk，源代码中需要不使用低版本jdk不支持的语法) -->
                 </configuration>
 
